@@ -18,7 +18,6 @@ PERL=		perl
 RM=		rm -f
 # KRB5 stuff
 KRB5_INCLUDES=
-LIBKRB5=
 
 PEX_LIBS=
 EX_LIBS= 
